--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         Скинь <b id="pngImportState">spritesheet.png</b> и
         <b id="jsonImportState">spritesheet.json</b>
       </h1>
-      <h2>Или скинь картинки создания новой таблицы</h2>
+      <h2>Или скинь картинки для создания новой таблицы</h2>
       <h3>А то и все сразу, чтобы загрузить и тут же добавить каринки</h3>
-      <h3>Ctrl+S - Чтобы скачать</h3>
+      <h3>Ctrl+S - Чтобы скачать png и json</h3>
     </div>
 
     <div id="wrapper">
