how to del sprite

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         <b id="jsonImportState">spritesheet.json</b>
       </h1>
       <h2>Или скинь картинки для создания новой таблицы</h2>
-      <h3>А то и все сразу, чтобы загрузить и тут же добавить каринки</h3>
+      <h3>А то и все сразу, чтобы загрузить и тут же добавить каринки</h3><br/>
       <h3>Ctrl+S - Чтобы скачать png и json</h3>
+      <h3>ПКМ по спрайту - удалить из списка</h3>
     </div>
 
     <div id="wrapper">
