--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
 
     <script src="utils.js"></script>
+    <script src="controls.js"></script>
     <script src="multiplier.js"></script>
     <script src="render.js"></script>
     <script src="upload.js"></script>
