--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <button id="btn-save">Save table (Ctrl+S)</button>
           <button id="btn-export">Export sprites (Ctrl+E)</button>
         </div>
+        <div>
+          <canvas id="selected-view" height="1"></canvas>
+        </div>
       </div>
       <h3 id="selected-file">Selected (Ctrl+C to Copy): none</h3>
     </div>
