Selected view fix

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <button id="btn-save">Save table (Ctrl+S)</button>
           <button id="btn-export">Export sprites (Ctrl+E)</button>
         </div>
-        <div>
+        <div id="selected-container">
           <canvas id="selected-view" height="1"></canvas>
         </div>
       </div>
