--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div id="container">
       <canvas id="canvas" width="1" height="1"></canvas>
-      <div id="list"></div>
+      <table id="list"></table>
     </div>
 
     <script>
