--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <script src="controls.js"></script>
     <script src="multiplier.js"></script>
     <script src="render.js"></script>
+    <script src="list.js"></script>
     <script src="upload.js"></script>
   </body>
 </html>
