--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     </div>
 
     <div id="container">
-      <canvas id="canvas" width="1" height="1"></canvas>
+      <div id="canvas-block">
+        <canvas id="canvas" width="1" height="1"></canvas>
+      </div>
       <table id="list"></table>
     </div>
 
