--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <canvas id="selected-view" height="1"></canvas>
         </div>
       </div>
-      <h3 id="selected-file">Selected (Ctrl+C to Copy): none</h3>
+      <h3 id="selected-file">Selected: none</h3>
     </div>
 
     <div id="container">
