--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <script src="utils.js"></script>
     <script src="controls.js"></script>
     <script src="multiplier.js"></script>
+    <script src="sorting.js"></script>
     <script src="render.js"></script>
     <script src="list.js"></script>
     <script src="upload.js"></script>
