--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
               >1</b
             >
           </div>
+          <div>
+            <input type="checkbox" id="auto-goodest" />
+            <label for="scales">Scales</label>
+          </div>
         </div>
         <div id="controls">
           <button id="btn-save">Save table (Ctrl+S)</button>
