--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <div>
             <input type="checkbox" id="auto-goodest" />
-            <label for="scales">Scales</label>
+            <label for="scales">Auto goodest</label>
           </div>
         </div>
         <div id="controls">
