--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             Width:
             <input type="range" id="multi-w" min="1" max="10" value="1" /><b
               id="multi-w-value"
+              disabled
               >1</b
             >
           </div>
@@ -39,6 +40,7 @@
             Height:
             <input type="range" id="multi-h" min="1" max="10" value="1" /><b
               id="multi-h-value"
+              disabled
               >1</b
             >
           </div>
