--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Width:
             <input type="range" id="multi-w" min="1" max="10" value="1" /><b
               id="multi-w-value"
-              disabled
+              disabled="true"
               >1</b
             >
           </div>
@@ -40,7 +40,7 @@
             Height:
             <input type="range" id="multi-h" min="1" max="10" value="1" /><b
               id="multi-h-value"
-              disabled
+              disabled="true"
               >1</b
             >
           </div>
@@ -74,6 +74,7 @@
     <script src="utils.js"></script>
     <script src="controls.js"></script>
     <script src="multiplier.js"></script>
+    <script src="auto-goodest.js"></script>
     <script src="sorting.js"></script>
     <script src="render.js"></script>
     <script src="list.js"></script>
