--- a/index.html
+++ b/index.html
@@ -30,19 +30,13 @@
           <h4>== Multiplier ==</h4>
           <div>
             Width:
-            <input type="range" id="multi-w" min="1" max="10" value="1" /><b
-              id="multi-w-value"
-              disabled="true"
-              >1</b
-            >
+            <input type="range" id="multi-w" min="1" max="10" value="1" disabled />
+            <b id="multi-w-value">1</b>
           </div>
           <div>
             Height:
-            <input type="range" id="multi-h" min="1" max="10" value="1" /><b
-              id="multi-h-value"
-              disabled="true"
-              >1</b
-            >
+            <input type="range" id="multi-h" min="1" max="10" value="1" disabled />
+            <bid="multi-h-value">1</b>
           </div>
           <div>
             <input type="checkbox" id="auto-goodest" />
