--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <canvas id="selected-view" height="1"></canvas>
         </div>
       </div>
-      <h3 id="info">Delete: Ctrl+D | <b id="selected-file">Selected: none</b></h3>
+      <h3 id="info"><b>Delete: Ctrl+D</b><b>|</b><b id="selected-file">Selected: none</b></h3>
     </div>
 
     <div id="container">
