--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
         <div id="controls">
           <button id="btn-save">Save table (Ctrl+S)</button>
-          <button id="btn-export">Export sprites (Ctrl+E)</button>
-          <button id="btn-export-one">Export one (Ctrl+A)</button>
+          <button id="btn-export">Export all (Ctrl+A)</button>
+          <button id="btn-export-one">Export one (Ctrl+E)</button>
         </div>
         <div id="selected-container">
           <canvas id="selected-view" height="1"></canvas>
