--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Spritesheet Editor</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?5" />
     <script src="sfr.js"></script>
     <script src="magic.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.min.js"></script>
@@ -22,37 +22,111 @@
   <body>
     <div id="top">
       <h2 id="hello">
-        Drop <b>spritesheet.json</b> and <b>spritesheet.png</b> OR
-        <b>sprites</b> (png's)
+        Drop (<b>spritesheet.json</b> and <b>spritesheet.png</b>) OR
+        <b>png-sprites</b>
       </h2>
       <div id="panel">
         <div id="multiplier">
-          <h4>== Multiplier ==</h4>
+          <h4>Compress</h4>
           <div>
-            Width:
-            <input type="range" id="multi-w" min="1" max="10" value="1" disabled />
+            X:
+            <input
+              type="range"
+              id="multi-w"
+              min="1"
+              max="10"
+              value="1"
+              disabled
+            />
             <b id="multi-w-value">1</b>
           </div>
           <div>
-            Height:
-            <input type="range" id="multi-h" min="1" max="10" value="1" disabled />
+            Y:
+            <input
+              type="range"
+              id="multi-h"
+              min="1"
+              max="10"
+              value="1"
+              disabled
+            />
             <b id="multi-h-value">1</b>
           </div>
           <div>
             <input type="checkbox" id="auto-goodest" />
-            <label for="scales">Auto goodest</label>
+            <label for="scales">Auto</label>
+          </div>
+        </div>
+        <div id="paddings">
+          <h4>Margin</h4>
+          <div style="justify-content: center;">
+            <input
+              type="number"
+              id="padding-top"
+              min="0"
+              max="9"
+              placeholder="top"
+            />
+          </div>
+          <div style="justify-content: space-evenly;">
+            <input
+              type="number"
+              id="padding-left"
+              min="0"
+              max="9"
+              placeholder="left"
+            />
+            <input
+              type="number"
+              id="padding-right"
+              min="0"
+              max="9"
+              placeholder="right"
+            />
+          </div>
+          <div style="justify-content: center;">
+            <input
+              type="number"
+              id="padding-bottom"
+              min="0"
+              max="9"
+              placeholder="bottom"
+            />
+          </div>
+        </div>
+        <div id="paddings-wh" style="display: none;">
+          <h4>Padding (DONT USE)</h4>
+          <br />
+          <div>
+            Width:
+            <input type="number" id="padding-width" min="0" max="9" />
+          </div>
+          <div>
+            Height:
+            <input type="number" id="padding-height" min="0" max="9" />
+          </div>
+        </div>
+        <div id="paddings-visualizer">
+          <h4>Visualizer</h4>
+          <div id="pd-visual">
+            <div id="pd-visual-per_sprite">
+              <div id="pd-visual-frame">
+                <div id="pd-visual-real_sprite"></div>
+              </div>
+            </div>
           </div>
         </div>
         <div id="controls">
-          <button id="btn-save">Save table (Ctrl+S)</button>
-          <button id="btn-export">Export all (Ctrl+A)</button>
-          <button id="btn-export-one">Export one (Ctrl+E)</button>
+          <button id="btn-save">Save spritesheet.png + json (Ctrl+S)</button>
+          <button id="btn-export">Export all sprites (Ctrl+A)</button>
+          <button id="btn-export-one">Export selected sprite (Ctrl+E)</button>
         </div>
         <div id="selected-container">
+          <h4><b id="selected-file">Selected: ---</b></h4>
           <canvas id="selected-view" height="1"></canvas>
         </div>
       </div>
-      <h3 id="info"><b>Delete: Ctrl+D</b><b id="selected-file">Selected: none</b></h3>
+      <h3 id="info"><b>Delete selected sprite: Ctrl+D</b></h3>
     </div>
 
     <div id="container">
@@ -66,13 +140,14 @@
       document.getElementById("container").style.paddingTop =
         document.getElementById("top").clientHeight + "px";
     </script>
-    <script src="utils.js"></script>
-    <script src="controls.js"></script>
-    <script src="multiplier.js"></script>
-    <script src="auto-goodest.js"></script>
-    <script src="sorting.js"></script>
-    <script src="render.js"></script>
-    <script src="list.js"></script>
-    <script src="upload.js"></script>
+    <script src="utils.js?9"></script>
+    <script src="controls.js?9"></script>
+    <script src="multiplier.js?9"></script>
+    <script src="paddings.js?9"></script>
+    <script src="auto-goodest.js?9"></script>
+    <script src="sorting.js?9"></script>
+    <script src="render.js?9"></script>
+    <script src="list.js?9"></script>
+    <script src="upload.js?9"></script>
   </body>
 </html>
